# AppBase-Extended

./: CMakeLists.txt  README.md
cmake/: AppBase-CMakeLists.txt.in  FriendAppBaseConfig.cmake.in
include/friend/appbase/: AppBase.h  AppName.h  Input.h
src/: AppBase.cpp  AppName.cpp.in  Base.h
test/: CMakeLists.txt
test/src/: AppBase_test.cpp  main.cpp
